# MediaServer

./: .gitignore  CMakeLists.txt
Player/: CMakeLists.txt  DoubleBuffer.h  Player.cpp  Player.h  Video.cpp  Video.h  VideoPlayer.cpp  VideoPlayer.h  Window.cpp  Window.h
Server/: CMakeLists.txt  Server.cpp  Server.h  Video.cpp  Video.h  VideoPlayer.cpp  VideoPlayer.h  Window.cpp  Window.h  old.txt
